--- a/Project 4 Rock paper Scissors/index.html
+++ b/Project 4 Rock paper Scissors/index.html
@@ -38,7 +38,7 @@
 
         <div class="contest">
             <div class="userHand">
-                <h1>YOU PICKED</h1>
+                <h1>YOU PICKED IT</h1>
                 <div class="handImageContainer">
                     <img id="userPickImage" src="static/Images/Paper.png" alt="">
                 </div>
